--- a/apps/next-app/app/globals.css
+++ b/apps/next-app/app/globals.css
@@ -24,10 +24,21 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+@layer base{
+  :root{
+
+    --color-primary: rgb(255 115 179);
+    --color-secondary: rgb(111 114 185);
+  }
+
 }
